Archive2/11/cf49e3506871bf/output
main.cpp:6:29: error: expected ';' at end of declaration
    std::vector<int> numbers {2, 4, 6, 8};
                            ^
                            ;
main.cpp:13:10: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto i : numbers) {
         ^
main.cpp:13:17: error: range-based for loop is a C++11 extension [-Werror,-Wc++11-extensions]
    for (auto i : numbers) {
                ^
main.cpp:17:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
4 errors generated.
